--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>REYCO SEGUMA</title>
   </head>
   <body>
-
+    <h3>APPLICATION LIST</h3>
+    <ul>
+      <li><a href="https://xreyc-developers.github.io/yudi">Yudi</a></li>
+    </ul>
   </body>
 </html>
