--- a/yudi/index.html
+++ b/yudi/index.html
@@ -5,6 +5,10 @@
     <title>YUDI</title>
   </head>
   <body>
-    WELCOME TO YUDI
+    <ul>
+      <li draggable="true">Apple</li>
+      <li draggable="true">Ball</li>
+      <li draggable="true">Car</li>
+    </ul>
   </body>
 </html>
