--- a/yudi/index.html
+++ b/yudi/index.html
@@ -3,12 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>YUDI</title>
+    <link rel="stylesheet" href="./resources/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./resources/css/bootstrap.custom.css">
+    <link rel="stylesheet" href="./resources/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body>
-    <ul>
-      <li draggable="true">Apple</li>
-      <li draggable="true">Ball</li>
-      <li draggable="true">Car</li>
-    </ul>
+
+    <header class="main-page-header">
+      <img src="./resources/images/yudi.svg" class="logo">
+    </header>
+
+    <section>
+      <div class="user-selection-title">
+        Select User
+      </div>
+      <div class="row user-selection-container">
+        <div class="col-md-3 col-sm-12">
+          <div class="card user-selection-card">
+            <img src="https://randomuser.me/api/portraits/men/15.jpg">
+            <div>John Doe</div>
+            <div><button class="btn btn-primary">Select</button></div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <div class="card user-selection-card">
+            <img src="https://randomuser.me/api/portraits/men/94.jpg">
+            <div>Mark Tenor</div>
+            <div><button class="btn btn-primary">Select</button></div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <div class="card user-selection-card">
+            <img src="https://randomuser.me/api/portraits/women/17.jpg">
+            <div>Mary Parton</div>
+            <div><button class="btn btn-primary">Select</button></div>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-12">
+          <div class="card user-selection-card">
+            <img src="https://randomuser.me/api/portraits/men/10.jpg">
+            <div>Erwin Devor</div>
+            <div><button class="btn btn-primary">Select</button></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
