--- a/yudi/index.html
+++ b/yudi/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>YUDI</title>
-    <link rel="stylesheet" href="./resources/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./resources/css/bootstrap.custom.css">
-    <link rel="stylesheet" href="./resources/css/styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./resources/css/bootstrap.custom.css">
+    <link rel="stylesheet" href="./resources/css/styles.css">
   </head>
   <body>
 
@@ -52,8 +53,7 @@
       </div>
     </section>
 
-    <!--FIREBASE-->
-    <script src="./modules/firebase/firebase-config.js" type="module"></script>
+    <!--SCRIPT-->
     <script src="main.js" type="module"></script>
 
   </body>
