--- a/yudi/index.html
+++ b/yudi/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./resources/css/main.css">
+    <link rel="stylesheet" href="./resources/css/popup.css">
     <link rel="stylesheet" href="./resources/css/bootstrap.custom.css">
-    <link rel="stylesheet" href="./resources/css/styles.css">
   </head>
   <body>
 
@@ -52,6 +53,13 @@
         </div>
       </div>
     </section>
+
+    <!--POPUP-->
+    <!--LOGGING IN-->
+    <div class="popup-container">
+      <div class="popup-box">
+      </div>
+    </div>
 
     <!--SCRIPT-->
     <script src="main.js" type="module"></script>
