--- a/yudi/index.html
+++ b/yudi/index.html
@@ -26,38 +26,46 @@
         <div class="col-md-3 col-sm-12">
           <div class="card user-selection-card">
             <img src="https://randomuser.me/api/portraits/men/15.jpg">
-            <div>John Doe</div>
-            <div><button class="btn btn-primary">Select</button></div>
+            <div class="user-selection-name">John Doe</div>
+            <div class="user-selection-button-wrap"><button class="btn btn-primary">Select</button></div>
           </div>
         </div>
         <div class="col-md-3 col-sm-12">
           <div class="card user-selection-card">
             <img src="https://randomuser.me/api/portraits/men/94.jpg">
-            <div>Mark Tenor</div>
-            <div><button class="btn btn-primary">Select</button></div>
+            <div class="user-selection-name">Mark Tenor</div>
+            <div class="user-selection-button-wrap"><button class="btn btn-primary">Select</button></div>
           </div>
         </div>
         <div class="col-md-3 col-sm-12">
           <div class="card user-selection-card">
             <img src="https://randomuser.me/api/portraits/women/17.jpg">
-            <div>Mary Parton</div>
-            <div><button class="btn btn-primary">Select</button></div>
+            <div class="user-selection-name">Mary Parton</div>
+            <div class="user-selection-button-wrap"><button class="btn btn-primary">Select</button></div>
           </div>
         </div>
         <div class="col-md-3 col-sm-12">
           <div class="card user-selection-card">
             <img src="https://randomuser.me/api/portraits/men/10.jpg">
-            <div>Erwin Devor</div>
-            <div><button class="btn btn-primary">Select</button></div>
+            <div class="user-selection-name">Erwin Devor</div>
+            <div class="user-selection-button-wrap"><button class="btn btn-primary">Select</button></div>
           </div>
         </div>
       </div>
     </section>
 
     <!--POPUP-->
-    <!--LOGGING IN-->
+
+    <!--LOADING IN-->
     <div class="popup-container">
       <div class="popup-box">
+        <!--LOADING-->
+        <div class="popup-logo">
+          <img src="./resources/images/loading-disk.gif">
+        </div>
+        <div class="popup-message">
+          Loading...
+        </div>
       </div>
     </div>
 
