rearchitecture for indexdb

--- a/yudi/pages/projects/index.html
+++ b/yudi/pages/projects/index.html
@@ -23,12 +23,7 @@
       <div class="page-title">PROJECT</div>
 
       <!--USERS-->
-      <div class="yudi-users">
-        <a><img src="https://randomuser.me/api/portraits/men/15.jpg"></a>
-        <a><img src="https://randomuser.me/api/portraits/men/15.jpg"></a>
-        <a><img src="https://randomuser.me/api/portraits/men/15.jpg"></a>
-        <a><img src="https://randomuser.me/api/portraits/men/15.jpg"></a>
-      </div>
+      <div class="yudi-users"></div>
 
       <!--TABLE-->
       <!--TABLE HEADER-->
