restructuring with event listeners

--- a/yudi/pages/projects/index.html
+++ b/yudi/pages/projects/index.html
@@ -20,7 +20,10 @@
 
     <!--CONTENT-->
     <section>
-      <div class="page-title">PROJECT</div>
+      <div class="page-title">
+        <span>PROJECT<span>
+        <input type="submit" value="Create New" class="btn btn-primary page-title-create-btn">
+      </div>
 
       <!--USERS-->
       <div class="yudi-users"></div>
