--- a/yudi/index.html
+++ b/yudi/index.html
@@ -6,7 +6,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="./resources/css/main.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./home.css">
     <link rel="stylesheet" href="./resources/css/popup.css">
     <link rel="stylesheet" href="./resources/css/bootstrap.custom.css">
   </head>
@@ -68,7 +68,7 @@
     </div>
 
     <!--SCRIPT-->
-    <script src="main.js" type="module"></script>
+    <script src="home.js" type="module"></script>
 
   </body>
 </html>
