--- a/yudi/pages/projects/index.html
+++ b/yudi/pages/projects/index.html
@@ -15,7 +15,7 @@
     <!--HEADER-->
     <header class="main-page-header">
       <img src="../../resources/images/yudi.svg" class="logo">
-      <button type="button" onclick="logoutUser()">Logout</button>
+      <input id="logoutBtn" type="submit" value="Logout">
     </header>
 
     <!--CONTENT-->
