--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <title>Marvel HTML Bootstrap 4 Template</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/unicons.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="./main/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./main/css/unicons.css">
+    <link rel="stylesheet" href="./main/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./main/css/owl.theme.default.min.css">
 
     <!-- MAIN STYLE -->
-    <link rel="stylesheet" href="css/tooplate-style.css">
+    <link rel="stylesheet" href="./main/css/tooplate-style.css">
 
 <!--
 
@@ -93,7 +93,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/undraw/undraw_software_engineer_lvl5.svg" class="img-fluid" alt="svg image">
+                        <img src="./main/images/undraw/undraw_software_engineer_lvl5.svg" class="img-fluid" alt="svg image">
                     </div>
                 </div>
 
@@ -115,31 +115,31 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image01.png" class="img-fluid" alt="project image">
+                            <img src="./main/images/project/project-image01.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image02.png" class="img-fluid" alt="project image">
+                            <img src="./main/images/project/project-image02.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image03.png" class="img-fluid" alt="project image">
+                            <img src="./main/images/project/project-image03.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image04.png" class="img-fluid" alt="project image">
+                            <img src="./main/images/project/project-image04.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image05.png" class="img-fluid" alt="project image">
+                            <img src="./main/images/project/project-image05.png" class="img-fluid" alt="project image">
                           </div>
                         </div>
                       </div>
@@ -311,14 +311,14 @@ https://www.tooplate.com/view/2115-marvel
           </div>
      </footer>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/Headroom.js"></script>
-    <script src="js/jQuery.headroom.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="./main/js/jquery-3.3.1.min.js"></script>
+    <script src="./main/js/popper.min.js"></script>
+    <script src="./main/js/bootstrap.min.js"></script>
+    <script src="./main/js/Headroom.js"></script>
+    <script src="./main/js/jQuery.headroom.js"></script>
+    <script src="./main/js/owl.carousel.min.js"></script>
+    <script src="./main/js/smoothscroll.js"></script>
+    <script src="./main/js/custom.js"></script>
 
   </body>
 </html>
