--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Marvel HTML Bootstrap 4 Template</title>
+    <title>Reyco Seguma</title>
 
     <link rel="stylesheet" href="./main/css/bootstrap.min.css">
     <link rel="stylesheet" href="./main/css/unicons.css">
