--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hey folks, I'm</span>
                             <div class="animated-info">
                                 <span class="animated-item">Reyco Seguma</span>
-                                <span class="animated-item">Fullstack Software Developer</span>
+                                <span class="animated-item">Fullstack Software Engineer</span>
                             </div>
                         </h1>
 
@@ -215,8 +215,8 @@ https://www.tooplate.com/view/2115-marvel
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Say hello</h3>
-                  <p class="footer-text mb-0">010 020 0960</p>
-                  <p><a href="mailto:hello@company.co">hello@company.co</a></p>
+                  <p class="footer-text mb-0">09089444999</p>
+                  <p><a href="mailto:segumareyco@gmail.com">segumareyco@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
