--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<p>&copy; 2021. All Rights Reserved.</p>
+					<p>Copyright © 2021 Reyco Seguma . All rights reserved</p>
 				</div>
 			</div>
 		</div>
