--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 					</div>
 					<div>
 						<ul>
-							<li>HTML5 / CSS3/SASS / Bootstrap</li>
+							<li>HTML5 / CSS3 / SASS / Bootstrap</li>
 							<li>JavaScript / TypeScript</li>
 							<li>React / NextJS / React Native / Vue / NuxtJS</li>
 							<li>Webpack / Babel</li>
@@ -333,6 +333,7 @@
 						<ul>
 							<li>NodeJS / Express</li>
 							<li>PHP / Code Igniter</li>
+							<li>Python / Django</li>
 							<li>Outsystems (Traditional / Reactive)</li>
 						</ul>
 					</div>
@@ -402,6 +403,37 @@
 				</div>
 			</div>
 
+		</div>
+	</div>
+
+
+	<!--CERTIFICATES-->
+	<div id="fh5co-resume" class="fh5co-bg-color" style="padding-top: 0px;">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Certificates</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-md-offset-0">
+					<ul>
+						<li>Outsystems - Associate Web Developer - Certification Exam</li>
+						<li>AWS Cloud Practitioner Essentials - Course</li>
+						<li>JavaScript Algorithms and Data Structures - Course</li>
+						<li>React - The Complete Guide (incl Hooks, React Router, Redux) - Course</li>
+					</ul>
+				</div>
+				<div class="col-md-6 col-md-offset-0">
+					<ul>
+						<li>React Native - The Practical Guide - Course</li>
+						<li>Git and Github Essentials - Course</li>
+						<li>Full-Stack Firebase - Course</li>
+						<li>Nuxt.js - Vue.js on Steroids - Course</li>
+						<li>Build a Python REST API with the Django Rest</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 
