--- a/index.html
+++ b/index.html
@@ -8,22 +8,6 @@
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -79,7 +63,6 @@
 									<li><a href="#"><i class="icon-github2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									
 								</ul>
 							</p>
 						</div>
@@ -109,7 +92,7 @@
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<p>
-						I am a Software developer with 3 years experience on creating maintainable 
+						I am a software developer with 3 years experience on creating maintainable 
 						application. Developed full stack web and mobile applications with
 						latest technologies and strong knowledge of design, architecture and 
 						integrations between different technologies.</p>
@@ -430,7 +413,7 @@
 						<li>Git and Github Essentials - Course</li>
 						<li>Full-Stack Firebase - Course</li>
 						<li>Nuxt.js - Vue.js on Steroids - Course</li>
-						<li>Build a Python REST API with the Django Rest</li>
+						<li>Build a Python REST API with the Django Rest - Course</li>
 					</ul>
 				</div>
 			</div>
