--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 							<!--SOCIAL ICONS-->
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-github2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://github.com/xreyc-developers" target="blank"><i class="icon-github2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/reyco-seguma" target="blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://web.facebook.com/rey.seguma" target="blank"><i class="icon-facebook2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -98,9 +98,9 @@
 						integrations between different technologies.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-github"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://github.com/xreyc-developers"><i class="icon-github"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/reyco-seguma"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://web.facebook.com/rey.seguma"><i class="icon-facebook3"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -171,7 +171,7 @@
 									<span class="company">Notre Dame of Marbel University - 2013 - 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Completed my thesis <i>"Home Automation with Smartphone"</i> built with a Arduino (microncontroller) interfaced to the mobile application via WiFi, SMS and Rest API as a backend application.</p>
 								</div>
 							</div>
 						</li>
@@ -200,7 +200,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Application Development</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Develops web application with HTML5, CSS3, JavaScript and ReactJS and other web technologies.</p>
 							</div>
 						</div>
 					</div>
@@ -208,11 +208,11 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-bargraph"></i>
+								<i class="icon-mobile"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Mobile Application Developent</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Develops mobile application with React Native, Cordova and Outsystems.</p>
 							</div>
 						</div>
 					</div>
@@ -220,11 +220,11 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-search"></i>
+								<i class="icon-gears"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Backend Application Development</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Develops backend application with different backend technologies like Node Express and CodeIgniter.</p>
 							</div>
 						</div>
 					</div>
@@ -239,8 +239,8 @@
 								<i class="icon-paintbrush"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Web/Mobile Design</h3>
+								<p>Design web and mobile application with Adobe XD or Figma.</p>
 							</div>
 						</div>
 					</div>
@@ -251,8 +251,8 @@
 								<i class="icon-briefcase"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Logo Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Graphic Design</h3>
+								<p>Design logo, icon and image editing with Inkscape and Gimp.</p>
 							</div>
 						</div>
 					</div>
@@ -264,7 +264,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Can help develop, debug ang fix issues on existing applications.</p>
 							</div>
 						</div>
 					</div>
@@ -297,6 +297,7 @@
 							<li>HTML5 / CSS3 / SASS / Bootstrap</li>
 							<li>JavaScript / TypeScript</li>
 							<li>React / NextJS / React Native / Vue / NuxtJS</li>
+							<li>Cordova / Ionic</li>
 							<li>Webpack / Babel</li>
 						</ul>
 					</div>
@@ -339,7 +340,7 @@
 							<li>GCP / Firebase</li>
 							<li>AWS (EC2, S3, RDS)</li>
 							<li>Postgres / MySQL / OracleDB / MongoDB</li>
-							<li>SFTP</li>
+							<li>SFTP / SMTP / SMS</li>
 						</ul>
 					</div>
 				</div>
@@ -378,9 +379,12 @@
 					</div>
 					<div>
 						<ul>
+							<li>Adobe XD / Figma</li>
 							<li>Photo Editing (Gimp, Inkscape)</li>
 							<li>Video Editing (Filmora, After Effects)</li>
 							<li>Microsoft Office, Drawio</li>
+							<li>Arduino / Rabery Pi / Proteus</li>
+							<li>SketchUp / AutoCAD</li>
 						</ul>
 					</div>
 				</div>
