--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Reyco Seguma</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+63 (908) 944 4999</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">segumareyco@gmail.com</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block"><a href="mailto:segumareyco@gmail.com">segumareyco@gmail.com</a></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Isulan, Sultan Kudarat, Philippines</span></li>
 					</ul>
 				</div>
@@ -130,7 +130,8 @@
 									<span class="company">Via Appia Philippines - March 2021 - Present</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Worked on internal and external projects focused on fullstack development of web and mobile applications.</p>
+									<p>Worked on server to server integrations between different systems like scheduled automated processing, S3 integration with batch processing, Email, SMS gateways, payment gateways and many more.</p>
 								</div>
 							</div>
 						</li>
@@ -142,7 +143,8 @@
 									<span class="company">Via Appia Philippines - March 2019 - March 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Worked on internal and external projects focused on fullstack development of web and mobile applications.</p>
+									<p>Worked on server to server integrations between different systems like scheduled automated processing, S3 integration with batch processing, Email, SMS gateways, payment gateways and many more.</p>
 								</div>
 							</div>
 						</li>
@@ -154,7 +156,7 @@
 									<span class="company">Smart Communications, Inc. - April 2017 - July 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Worked as a support engineer for monitoring and troubleshooting cell sites across regions.</p>
 								</div>
 							</div>
 						</li>
@@ -431,8 +433,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>My mad skills are up for grabs right now so hit me up if you're hiring.</p>
+					<p>Contact me at <a href="mailto:segumareyco@gmail.com">segumareyco@gmail.com</a></p>
 				</div>
 			</div>
 		</div>
