--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 							<li>NodeJS / Express</li>
 							<li>PHP / Code Igniter</li>
 							<li>Python / Django</li>
-							<li>Outsystems (Traditional / Reactive)</li>
+							<li>Outsystems (Traditional, Reactive)</li>
 						</ul>
 					</div>
 				</div>
@@ -380,7 +380,7 @@
 							<li>Adobe XD / Figma</li>
 							<li>Photo Editing (Gimp, Inkscape)</li>
 							<li>Video Editing (Filmora, After Effects)</li>
-							<li>Microsoft Office, Drawio</li>
+							<li>Microsoft Office / Drawio</li>
 							<li>Arduino / Rabery Pi / Proteus</li>
 							<li>SketchUp / AutoCAD</li>
 						</ul>
