--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 									<li><a href="https://web.facebook.com/rey.seguma" target="blank"><i class="icon-facebook2"></i></a></li>
 								</ul>
 							</p>
+
+							<p class="fh-nav-a">
+								<a href="#about">About Me</a> -
+								<a href="#myresume">My Resume</a> -
+								<a href="#myservices">My Services</a> -
+								<a href="#skills">Skills</a> -
+								<a href="#certificates">Certificates</a>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -69,6 +77,7 @@
 	</header>
 
 	<!--SECTION 2 ABOUT-->
+	<div id="about"></div>
 	<div id="fh5co-about" class="animate-box">
 		<div class="container">
 			<div class="row">
@@ -101,6 +110,7 @@
 					</p>
 				</div>
 			</div>
+			<div id="myresume"></div>
 		</div>
 	</div>
 
@@ -180,6 +190,7 @@
 	</div>
 	
 	<!--SECTION 4 SERVICE-->
+	<div id="myservices"></div>
 	<div id="fh5co-features" class="animate-box">
 		<div class="container">
 			<div class="services-padding">
@@ -271,6 +282,8 @@
 		</div>
 	</div>
 
+	<!--SKILLS-->
+	<div id="skills"></div>
 	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
@@ -387,12 +400,13 @@
 					</div>
 				</div>
 			</div>
-
+			<div id="certificates"></div>
 		</div>
 	</div>
 
 
 	<!--CERTIFICATES-->
+	
 	<div id="fh5co-resume" class="fh5co-bg-color" style="padding-top: 0px;">
 		<div class="container">
 			<div class="row animate-box">
