--- a/index.html
+++ b/index.html
@@ -167,6 +167,19 @@
 							</div>
 						</li>
 
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Freelance Developer</h3>
+									<span class="company">Self Employed - 2015 - 2018</span>
+								</div>
+								<div class="timeline-body">
+									<p>Worked on fullstack applications focused on record systems, report generations and ecomerce site.</p>
+								</div>
+							</div>
+						</li>
+
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
