--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							
 							<div class="profile-thumb" style="background: url(images/profile.png);"></div>
 							<h1><span>Reyco Seguma</span></h1>
-							<h3><span>Fullstack Software Developer</span></h3>
+							<h3><span>Fullstack Software Engineer</span></h3>
 
 							<!--SOCIAL ICONS-->
 							<p>
@@ -431,18 +431,18 @@
 				<div class="col-md-6 col-md-offset-0">
 					<ul>
 						<li>Outsystems - Associate Web Developer - Certification Exam</li>
-						<li>AWS Cloud Practitioner Essentials - Course</li>
+						<li>AWS Cloud Practitioner - Course</li>
 						<li>JavaScript Algorithms and Data Structures - Course</li>
-						<li>React - The Complete Guide (incl Hooks, React Router, Redux) - Course</li>
+						<li>React (incl Hooks, React Router, Redux) - Course</li>
 					</ul>
 				</div>
 				<div class="col-md-6 col-md-offset-0">
 					<ul>
-						<li>React Native - The Practical Guide - Course</li>
-						<li>Git and Github Essentials - Course</li>
+						<li>React Native - Course</li>
+						<li>Git and Github - Course</li>
 						<li>Full-Stack Firebase - Course</li>
 						<li>Nuxt.js - Vue.js on Steroids - Course</li>
-						<li>Build a Python REST API with the Django Rest - Course</li>
+						<li>Python REST API with Django - Course</li>
 					</ul>
 				</div>
 			</div>
