--- a/index.html
+++ b/index.html
@@ -97,10 +97,24 @@
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
 					<p>
-						I am a software developer with 3 years experience on creating maintainable 
-						application. Developed full stack web and mobile applications with
-						latest technologies and strong knowledge of design, architecture and 
-						integrations between different technologies.</p>
+						As an Innovations Engineer at Via Appia Philippines Inc., I create and
+						maintain applications that enhance the company's digital transformation
+						and customer experience. I work with the latest technologies and have a
+						strong knowledge of design, architecture, and integrations between
+						different systems.
+
+						I have developed full-stack web and mobile applications using OutSystems,
+						Flutter, React, and other frameworks and tools. I have also earned multiple
+						certifications in web development and received recognition for my innovative
+						and responsive solutions. 
+
+						I graduated with a Bachelor of Electronics and Communication Engineering from
+						Notre Dame of Marbel University in 2018, where I honed my skills in software
+						engineering, communication systems, and electronics. I am passionate about
+						learning new technologies and applying them to real-world problems.
+						I am also motivated by the opportunity to collaborate with talented and
+						diverse teams and contribute to the company's vision and goals.
+					</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/xreyc-developers"><i class="icon-github"></i></a></li>
