--- a/index.html
+++ b/index.html
@@ -148,8 +148,21 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
+									<h3 class="timeline-title">Innovations Engineer</h3>
+									<span class="company">Via Appia Philippines - September 2023 - Present</span>
+								</div>
+								<div class="timeline-body">
+									<p>Worked on internal and external projects focused on fullstack development of web and mobile applications.</p>
+									<p>Worked on server to server integrations between different systems like scheduled automated processing, S3 integration with batch processing, Email, SMS gateways, payment gateways and many more.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
 									<h3 class="timeline-title">Technical Consultant</h3>
-									<span class="company">Via Appia Philippines - March 2021 - Present</span>
+									<span class="company">Via Appia Philippines - March 2021 - September 2023</span>
 								</div>
 								<div class="timeline-body">
 									<p>Worked on internal and external projects focused on fullstack development of web and mobile applications.</p>
