--- a/index.html
+++ b/index.html
@@ -732,6 +732,7 @@
 									Group / Elastic Beanstalk</li>
 								<li>Serverless - Lambda / API Gateway / SNS / SQS / S3 / Cloud Watch</li>
 								<li>ECS / EKS / Cloudformation / Serverless Framework</li>
+								<li>SSM / Secret Manager / Cognito / WAF</li>
 								<li>Digital Ocean / Droplets / Docker / Kubernetes / App Platform</li>
 								<li>Code Pipeline / Code Build / Code Deploy / Github Actions</li>
 								<li>Postgres / MySQL / OracleDB / MongoDB / DynamoDB</li>
